# gf256-erasure-code

./: .gitignore  CMakeLists.txt  README.md  RUN_FILE1.md
example/: decode  decode.cpp  encode.cpp  rmshards.cpp  testbuild.cpp  testdecode.cpp  testec.cpp
inc/: ec.hpp  gf.hpp  gfm.hpp  table.hpp  utils.hpp
run/: decode  encode  rmshards  testbuild  testdecode  testec
run/data/file/: abcdefg  example  file1  file3  file4
run/scripts/: clean.sh
src/: ec.cpp  gf.cpp  gfm.cpp  table.cpp  utils.cpp
